deployment.windows.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-api-windows
  labels:
    name: test-api-windows
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  namespace: test-api-windows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: test-api
        image: tobiasfenster/test-api:windows
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /timeout/health
            port: 80
          failureThreshold: 30
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 60
        readinessProbe:
          httpGet:
            path: /timeout/health
            port: 80
          failureThreshold: 20
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 30
        startupProbe:
          httpGet:
            path: /timeout/health
            port: 80
          failureThreshold: 120
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test-api-windows
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "30"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: "http"
  selector:
    app: test-api
