deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: test-api
        image: tobiasfenster/test-api
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /timeout/health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: test-api
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: "http"
  selector:
    app: test-api
