deployment-short.linux.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-api-linux-short
  labels:
    name: test-api-linux-short
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api-short
  namespace: test-api-linux-short
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api-short
  template:
    metadata:
      labels:
        app: test-api-short
    spec:
      containers:
        - name: test-api-short
          image: tobiasfenster/test-api:linux
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /timeout/health
              port: 80
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 60
          readinessProbe:
            httpGet:
              path: /timeout/health
              port: 80
            failureThreshold: 20
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          startupProbe:
            httpGet:
              path: /timeout/health
              port: 80
            failureThreshold: 120
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
      nodeSelector:
        kubernetes.io/os: linux
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: test-api
#  namespace: test-api-linux
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "30"
#spec:
#  type: LoadBalancer
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#      name: "http"
#  selector:
#    app: test-api
#  #externalTrafficPolicy: Local
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api-ingress-short
  namespace: test-api-linux-short
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/rewrite-target: /BCFake/$2
spec:
  ingressClassName: nginx
  rules:
    - host: fps-alpaca.westeurope.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: test-api-short
                port:
                  number: 80
            path: /test-api-short(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - fps-alpaca.westeurope.cloudapp.azure.com
---
apiVersion: v1
kind: Service
metadata:
  name: test-api-short
  namespace: test-api-linux-short
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: "30"
spec:
  selector:
    app: test-api-short
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
